# apis-instance-nomansland-dev

./: .gitignore  AUTO_DELETE_RELATIONS.md  README.md  demo_auto_delete.py  pyproject.toml  static_test.py
.github/: copilot-instructions.md
apis_ontology/: __init__.py  apps.py  date_utils.py  filtersets.py  forms.py  hijri_util.py  models.py  querysets.py  search_utils.py  signals  signals.py  tables.py  urls.py  views.py
apis_ontology/management/commands/: export-nodes-links.py  export_data.py  import_data.py  import_entities.py  import_islam_anatolia.py  import_relations.py  import_zotero.py  monster_import_IA.py  report_bad_dates.py  setup_collections.py  setup_properties.py  (+1 more)
apis_ontology/migrations/: 0001_initial.py  0001_squashed_0018_merge_20250122_0916.py  0002_expression_description_manuscript_additions_and_more.py  0003_alter_title_abbreviation.py  0004_alter_profession_options_alter_title_options_and_more.py  0005_event_name_in_arabic_expression_name_in_arabic_and_more.py  0006_scripttype_alter_expression_options_and_more.py  0007_event_pk_old_expression_pk_old_institution_pk_old_and_more.py  0008_alter_versionevent_options_and_more.py  0009_manuscript_foliation_type_and_more.py  0010_acopyof_ancestralcountryof_annotatedby_attributedto_and_more.py  0011_versionworkin_versionworkedfor_versionworkedat_and_more.py  0012_remove_acopyof_certainty_and_more.py  0013_acopyof_certainty_ancestralcountryof_certainty_and_more.py  0014_acopyof_pk_old_ancestralcountryof_pk_old_and_more.py  0015_placeofannotationof_refutationof_versionrefutationof_and_more.py  0016_acopyof_end_date_acopyof_end_date_written_and_more.py  0017_alter_event_status_alter_expression_status_and_more.py  0017_remove_acopyof_end_date_and_more.py  0018_merge_20250122_0916.py  0019_remove_person_end_remove_person_end_date_from_and_more.py  0020_ancestralcountryof_end_and_more.py  0021_remove_versionevent_self_contenttype_and_more.py  0022_alter_acopyof_options_and_more.py  0023_containsmanuscriptpart_copiedinplace_and_more.py  0024_remove_versionacopyof_version_tag_and_more.py  0025_manuscriptparthappenedinplace_and_more.py  0026_event_hidden_import_log_expression_hidden_import_log_and_more.py
apis_ontology/settings/: __init__.py  server_settings.py
apis_ontology/templates/: base.html  interval.html  search.html
apis_ontology/tests/: test_auto_delete_relations.py  test_date_utils.py  test_hijri_util.py
data/: data_dump_helper.py  properties.csv
local/: README.md
(+6 files in other folders)
